hphp/hack/test/typecheck/enum/bad/trivial_compare_string_enum_to_int_bad.php.rust_elab.exp
File "trivial_compare_string_enum_to_int_bad.php", line 8, characters 10-20:
This expression is always `false` (Typing[4118])
  File "trivial_compare_string_enum_to_int_bad.php", line 7, characters 12-14:
  This is an int
  File "trivial_compare_string_enum_to_int_bad.php", line 3, characters 19-24:
  This is a string
File "trivial_compare_string_enum_to_int_bad.php", line 12, characters 10-20:
This expression is always `true` (Typing[4118])
  File "trivial_compare_string_enum_to_int_bad.php", line 11, characters 12-14:
  This is an int
  File "trivial_compare_string_enum_to_int_bad.php", line 3, characters 19-24:
  This is a string
